80% maked backend api, added post and category controller and fifty-fifty design for frontend
