# back/api/src/app/Http/Controllers/Admin/UserController.php
@@ -1,0 +1,55 @@
+<?php
+
+namespace app\Http\Controllers\Admin;
+
+use App\Http\Controllers\Controller;
+use App\Repositories\UserRepository;
+use Illuminate\Http\Request;
+
+class UserController extends Controller
+{
+
+    public function __construct(private UserRepository $userRepository)
+    {
+        //сделать контроллер для панели админа по действиям с юзером
+    }
+    /**
+     * Display a listing of the resource.
+     */
+    public function index()
+    {
+        //
+    }
+
+    /**
+     * Store a newly created resource in storage.
+     */
+    public function store(Request $request)
+    {
+        //
+    }
+
+    /**
+     * Display the specified resource.
+     */
+    public function show(string $id)
+    {
+        //
+    }
+
+    /**
+     * Update the specified resource in storage.
+     */
+    public function update(Request $request, string $id)
+    {
+        //
+    }
+
+    /**
+     * Remove the specified resource from storage.
+     */
+    public function destroy(string $id)
+    {
+        //
+    }
+}
